--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -48,6 +48,7 @@
             </li>
           {% endfor %}
         {% endif %}
+        <li><a href="https://www.limbsaver.com">Go to LimbSaver.com</a></li>
       </ul>
     </div>
   </div>
