--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -232,11 +232,11 @@ a {
 }
 
 .content-section {
-    margin-top: 100px;
-    padding-top: 100px;
+    margin-top: 20px;
+    padding-top: 20px;
     @media(min-width:767px) {
-        margin-top: 125px;
-        padding-top: 125px;
+        margin-top: 20px;
+        padding-top: 20px;
     }
     /* Added in { Personal } for responsive images in posts and section contents */
     img {
@@ -244,7 +244,6 @@ a {
         max-width: 100%;
         height: auto;
         margin: 0 auto;
-        border: 1px solid $font-color;
     }
     /* Added in { Personal } */
     ul,
@@ -444,4 +443,12 @@ body {
 
 .fourofour {
   border: 1px solid $primary-color !important;
+}
+
+
+.border-r {
+    border-right: 1px solid #eee;
+}
+.border-b {
+    border-bottom: 1px solid #eee;
 }
