--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <header class="intro">
   <div class="intro-body">
     <div class="container">
-      <img src="../img/fieldtester.png">
+      <img src="../img/fieldtesterkodiak.png">
         </div>
     </div>
   </div>
